--- a/src/Components/Describe.css
+++ b/src/Components/Describe.css
@@ -3,6 +3,7 @@
 }
 
 .body-con {
+    
     align-items: center;
     margin-top: 15%;
     margin-left: 25%;
@@ -11,6 +12,10 @@
 .uni {
     font-weight: bold;
     color: rgb(236, 97, 97);
+}
+
+.links{
+    margin-left: 15%;
 }
 
 .university{
@@ -23,4 +28,5 @@
 
 .websites{
     color: rgb(236, 97, 97);
+    font-weight: bold;
 }
